# kgpu

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  build.gradle.kts  coordinates.html  getting_started.html  gradle.properties  homepage.html  index.html  intro.html  modules.html  print.html  resources.html  settings.gradle  settings.gradle.kts
.github/workflows/: format.yml  website.yml
docs/: book.toml  packages.md
docs/src/: SUMMARY.md  coordinates.md  getting_started.md  homepage.md  intro.md  modules.md  resources.md
dokka/: -modules.html  navigation.html
dokka/kcgmath/: navigation.html
dokka/kgpu/: navigation.html
dokka/kshader/: navigation.html
examples/: build.gradle  build.gradle.kts  cube.vert  examples.js  examples.js.map  index.html  shared.frag  triangle.frag  triangle.vert
gradle/wrapper/: gradle-wrapper.properties
kgpu/: index-outline.html  index.html  package-list
kgpu/alltypes/: index.html
kgpu/com.noahcharlton.wgpuj/: index.html
kgpu/com.noahcharlton.wgpuj.jni/: index.html
kgpu/com.noahcharlton.wgpuj.util/: index.html
kgpu/io.github.kgpu/: -pipeline-layout.html  -shader-module.html  copy-to-native-color.html  (+3 more)
kgpu/io.github.kgpu.internal/: index.html
kgpu/io.github.kgpu.wgpuj/: index.html
kgpu/io.github.kgpu.wgpuj.jni/: index.html
kgpu/io.github.kgpu.wgpuj.util/: index.html
modules/: build.gradle.kts
native/: build.gradle  build.gradle.kts
structure/: jnrgen.html  structure.html
wgpuj/: README.md  build.gradle.kts
wgpuj/wgpu-test/: Cargo.toml
wgpuj/wgpu-test/src/: lib.rs  wgpu_enum.rs
(+3473 files in other folders)
