[package]
name = "wgpu-test"
version = "0.1.0"
authors = ["Noah Charlton <ncharlton002@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/gfx-rs/wgpu"
version = "0.5"
features = ["raw-window-handle", "trace"]

[dependencies.wgt]
package = "wgpu-types"
git = "https://github.com/gfx-rs/wgpu"
version = "0.5"

[dependencies.wgn]
package = "wgpu-native"
git = "https://github.com/gfx-rs/wgpu-native"
version = "0.5"
